# EQ101

./: .gitignore  CMakeLists.txt  EQ101.jucer  README.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
